<resources>
    <string name="app_name">SlouchyHabit</string>
    <string name="habit_screen_title">Ваша привычка</string>
    <string name="habit_title_hint">Введите название</string>
    <string name="habit_description_hint">Введите описание</string>
    <string name="habit_type_header">Тип привычки</string>
    <string name="add_habit_button_description">Add habit</string>
    <string name="priority_title">Приоритет</string>
    <string name="periodicity_title">Периодичность</string>
    <string name="save_habit_button_text">Сохранить</string>
    <string name="repetitions_field_hint">5</string>
    <string name="days_count_field_hint">6</string>
    <string name="repetitions_field_base_text">раз в</string>
    <string name="days_count_field_base_text">дней</string>
    <string name="good_habits_tab_title">Хорошие</string>
    <string name="bad_habits_tab_title">Плохие</string>
    <string name="tab_placeholder">типы привычек</string>
    <string name="habits_list_title">Список привычек</string>
    <string name="about_title">О приложении</string>
    <string name="create_habit_title">Создать привычку</string>
    <string name="edit_habit_title">Редактировать привычку</string>
    <string name="form_validation_text">Заполните все поля</string>
    <string name="open_filter_button_description">open filter</string>
    <string name="sort_by_priority_title">Отсортировать по приоритету</string>
    <string name="find_habit_hint">Найти привычку</string>
    <string name="version_text">Slouchy habit, ver. 3.0</string>
    <string name="clear_filter_button_description">clear filter</string>
    <string name="user_picture">User picture</string>
    <string name="delete_button">delete button</string>
    <string name="habit_done">habit done</string>
    <string name="underdone_bad_habit_message">Можете выполнить еще</string>
    <string name="underdone_good_habit_message">Стоит выполнить еще</string>
    <string name="overdone_bad_habit_message">Хватит это делать</string>
    <string name="overdone_good_habit_message">You are breathtaking</string>
    <string name="devider_dot"> • </string>
    <string name="habit_list_destination">habit_list_screen</string>
    <string name="create_habit_destination">create_habit_screen</string>
</resources>