<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateHabitActivity">

        <EditText
            android:id="@+id/habitNameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/amatic_sc_bold"
            android:hint="@string/habit_title_hint"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/habitDescriptionField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amatic_sc_bold"
            android:hint="@string/habit_description_hint"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/habitNameField"
            app:layout_constraintStart_toStartOf="@+id/habitNameField"
            app:layout_constraintTop_toBottomOf="@+id/habitNameField" />

        <LinearLayout
            android:id="@+id/prioritySelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/habitDescriptionField"
            app:layout_constraintTop_toBottomOf="@+id/habitDescriptionField">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_sc_bold"
                android:text="@string/priority_title"
                android:textColor="@color/headers_color"
                android:textSize="34sp" />

            <Spinner
                android:id="@+id/habitPrioritySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/priorities_array"
                android:popupBackground="@color/background_color" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/habitTypeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:checkedButton="@id/goodHabitRadioButton"
            app:layout_constraintStart_toStartOf="@+id/prioritySelector"
            app:layout_constraintTop_toBottomOf="@+id/prioritySelector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_sc_bold"
                android:text="@string/habit_type_header"
                android:textColor="@color/headers_color"
                android:textSize="34sp" />

            <RadioButton
                android:id="@+id/goodHabitRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/headers_color"
                android:fontFamily="@font/amatic_sc_bold"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/badHabitRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/headers_color"
                android:fontFamily="@font/amatic_sc_bold"
                android:textSize="24sp" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/periodicitySelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/habitTypeRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/habitTypeRadioGroup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_sc_bold"
                android:text="@string/periodicity_title"
                android:textColor="@color/headers_color"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/periodicityFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/habitTypeRadioGroup"
                app:layout_constraintTop_toBottomOf="@+id/habitTypeRadioGroup">

                <EditText
                    android:id="@+id/repetitionsField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:inputType="number"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/repetitionsFieldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:text="@string/repetitions_field_base_text"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/daysCountField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:inputType="number"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/daysCountFieldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amatic_sc_bold"
                    android:text="@string/days_count_field_base_text"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/saveHabitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/headers_color"
            android:fontFamily="@font/amatic_sc_bold"
            android:text="@string/save_habit_button_text"
            android:textColor="@color/background_color"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="@+id/periodicitySelector"
            app:layout_constraintTop_toBottomOf="@+id/periodicitySelector" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
